--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -9,5 +9,6 @@ Hello
 
 <a href="/goodbye">goodbye</a>
 <a href="/exit">exit!</a>
+<a href="/first/hello?name=myname&surname=mysurname">request with param</a>
 </body>
 </html>
