--- a/src/main/webapp/WEB-INF/views/first/hello.html
+++ b/src/main/webapp/WEB-INF/views/first/hello.html
@@ -7,8 +7,9 @@
 <body>
 Hello
 
-<a href="/goodbye">goodbye</a>
-<a href="/exit">exit!</a>
+<a href="/goodbye">goodbye</a> or
+<a href="/exit">exit!</a> or
 <a href="/first/hello?name=myname&surname=mysurname">request with param</a>
+<p th:text="${message}"></p>
 </body>
 </html>
