--- a/src/main/webapp/WEB-INF/views/hello.html
+++ b/src/main/webapp/WEB-INF/views/hello.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Exit</title>
+    <title>Hello</title>
 </head>
 <body>
-No more links
+Hello world!
 </body>
 </html>
